[package]
name = "knsh"
version = "0.0.3"
edition = "2021"
rust-version = "1.75.0"
authors = ["nukopy <nukopy@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nukopy/knsh"
homepage = "https://github.com/nukopy/knsh"
description = "Toy shell written in Rust"
categories = ["os"]
keywords = ["shell", "sh", "cli"]

[dependencies]
